--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 :root */
 
 :root {
-    --cor0: #f7f9fa;
+    --cor0: #eeeeeef0;
     --cor1: #20262d;
     --cor2: #A60B16;
     --cor3: #660708;
@@ -38,14 +38,12 @@
     
 }
 
-* {
-    margin: 0px;
-    padding: 0px;
-}
+* { margin: 0px; padding: 0px;}
 
 body {
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
+    text-align: center;
 }
 
 a.externo::after {
@@ -297,3 +295,29 @@ footer {
     font-size: 0.8em;
     padding: 5px;
 }
+
+.slide-controller:nth-child(1):checked ~ .slide-show .slides-list{--selected-item: 0;}
+.slide-controller:nth-child(2):checked ~ .slide-show .slides-list{--selected-item: 1;}
+.slide-controller:nth-child(3):checked ~ .slide-show .slides-list{--selected-item: 2;}
+.slide-controller:nth-child(4):checked ~ .slide-show .slides-list{--selected-item: 3;}
+
+.slide-show{
+  overflow: hidden;
+}
+
+.slides-list{
+  --selected-item: 0;
+  --total-items: 4;
+  list-style-type: none;
+  margin: 10px 0;
+  padding: 0;
+  position: relative;
+  left: calc(var(--selected-item) * -100%);
+  width: calc(var(--total-items) * 100%);
+  transition: left 0.4s cubic-bezier(0.680, -0.550, 0.265, 1.550);
+  
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+}
+  
