--- a/style.css
+++ b/style.css
@@ -223,6 +223,18 @@ div.back > a:hover {
     color: white;
 }
 
+div.link > a {
+    background-color: rgba(0, 0, 0, 0.903);
+    color: white;
+    font-family: var(--fonte-Orbitron);
+    font-size: 1em;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 4px;
+    border-radius: 3px;
+    transition-duration: 0.5s;
+}
+
 div.video {
     background-color: var(--cor5);
     margin: 0px -20px 30px -20px;
